--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -17,4 +17,9 @@
         font-weight: 500;
         text-transform: uppercase;
     }
+    &_submit {
+        width: 100%;
+        height: 55px;
+        font-size: 16px;
+    }
 }
