--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -11,5 +11,8 @@
 @import 'blocks/header';
 @import 'blocks/buttons';
 @import 'blocks/advantages';
+@import 'blocks/titles';
+@import 'blocks/consultation';
+@import 'blocks/forms';
 
 @import 'media';
