--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -18,6 +18,18 @@
             max-width: 210px;
         }
     } 
+
+    .consultation {
+        &__descr {
+            text-align: center;
+        }
+        .title_left {
+            text-align: center;
+        }
+        .feed-form {
+            margin: 36px auto 0;
+        }
+    }
 }
 
 @media (max-width: 767px) {
@@ -72,9 +84,34 @@
         }
         .title {
             margin-bottom: 0px;
+            font-size: 27px;
         }
         &__subtitle {
             margin-top: 20px;
+        }
+    }
+    .consultation {
+        &__descr {
+            text-align: center;
+            margin-top: 50px;
+        }
+        .title_left {
+            text-align: center;
+            font-size: 27px;
+        }
+        .feed-form {
+            margin: 36px auto 0;
+            input {
+                height: 40px;
+                width: 270px;
+                margin: 0 auto 15px;
+            }
+        }
+        .button_submit {
+            width: 225px;
+            height: 42px;
+            font-size: 14px;
+            margin: 5px auto 0;
         }
     }
 }
@@ -140,6 +177,28 @@
         }
         .title {
             font-size: 20px;
+        }
+    }
+    .consultation {
+        min-height: 500px;
+        .title_left{
+            display: none;
+        }
+        &__descr {
+            padding: 0 27px;
+            margin-top: 0px;
+            font-size: 16px;
+        }
+        .feed-form {
+            input {
+                width: 200px;
+                height: 40px;
+            }
+        }
+        .button_submit {
+            width: 185px;
+            height: 40px;
+            font-size: 12px;
         }
     }
 }
