--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,23 +1,24 @@
 @font-face {
-    font-family: 'Museo Sans Cyrl';
-    src: local('MuseoSansCyrl-300'),
-        url('../fonts/MuseoSansCyrl-300.woff') format('woff');
-    font-weight: 300;
-    font-style: normal;
+	font-family: 'Museo Sans Cyrl';
+	src: url('fonts/MuseoSansCyrl_0.eot');
+	src: local('☺'), url('fonts/MuseoSansCyrl_0.woff') format('woff'), url('fonts/MuseoSansCyrl_0.ttf') format('truetype'), url('fonts/MuseoSansCyrl_0.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'Museo Sans Cyrl';
-    src: local('MuseoSansCyrl-500'),
-        url('../fonts/MuseoSansCyrl-300.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+	font-family: 'Museo Sans Cyrl';
+	src: url('fonts/MuseoSansCyrl_1.eot');
+	src: local('☺'), url('fonts/MuseoSansCyrl_1.woff') format('woff'), url('fonts/MuseoSansCyrl_1.ttf') format('truetype'), url('fonts/MuseoSansCyrl_1.svg') format('svg');
+	font-weight: medium;
+	font-style: normal;
 }
 
 @font-face {
-    font-family: 'Museo Sans Cyrl';
-    src: local('MuseoSansCyrl-700'),
-        url('../fonts/MuseoSansCyrl-300.woff') format('woff');
-    font-weight: 700;
-    font-style: normal;
+	font-family: 'Museo Sans Cyrl';
+	src: url('fonts/MuseoSansCyrl_2.eot');
+	src: local('☺'), url('fonts/MuseoSansCyrl_2.woff') format('woff'), url('fonts/MuseoSansCyrl_2.ttf') format('truetype'), url('fonts/MuseoSansCyrl_2.svg') format('svg');
+	font-weight: bold;
+	font-style: normal;
 }
+
