--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,6 +3,7 @@
     font-size: 30px;
     font-weight: 700;
     text-transform: uppercase;
+    text-align: center;
     &_left {
         color: #ffffff;
         font-size: 36px;
