--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,5 +14,9 @@
 @import 'blocks/titles';
 @import 'blocks/consultation';
 @import 'blocks/forms';
+@import 'blocks/carousel';
+@import 'blocks/catalog';
+@import 'blocks/feed';
+@import 'blocks/footer';
 
 @import 'media';
